--- a/infer_linarg_function.ipynb
+++ b/infer_linarg_function.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 56,
+   "execution_count": 3,
    "id": "b4bb61da",
    "metadata": {},
    "outputs": [],
@@ -96,7 +96,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 53,
+   "execution_count": 5,
    "id": "0dfbf801",
    "metadata": {},
    "outputs": [
@@ -104,20 +104,25 @@
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "100%|████████████████████████████████████████████| 3/3 [00:00<00:00, 410.21it/s]\n"
+      "100%|██████████████████████████████████████████████████████| 3/3 [00:00<00:00, 485.90it/s]\n"
      ]
     }
    ],
    "source": [
+    "from scipy.sparse import eye\n",
     "A = csr_matrix([[3, 0, 0], [1, -1, 0], [2, 0, 1]], dtype=float)\n",
-    "Ainv = spinv_triangular(A)"
+    "Ainv = spinv_triangular(A)\n",
+    "lu = splu(A)\n",
+    "Ainv2 = spsolve(A, eye(3))"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 54,
+   "execution_count": 7,
    "id": "18e26463",
-   "metadata": {},
+   "metadata": {
+    "scrolled": true
+   },
    "outputs": [
     {
      "name": "stdout",
@@ -127,12 +132,49 @@
       "  (1, 0)\t0.3333333333333333\n",
       "  (1, 1)\t-1.0\n",
       "  (2, 0)\t-0.6666666666666666\n",
+      "  (2, 2)\t1.0\n",
+      "[[ 0.33333333  0.          0.        ]\n",
+      " [ 0.33333333 -1.         -0.        ]\n",
+      " [-0.66666667  0.          1.        ]]\n"
+     ]
+    }
+   ],
+   "source": [
+    "print(Ainv)\n",
+    "print(Ainv2)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 11,
+   "id": "8d08d837-32cd-4d42-96bc-0e75a5d96130",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "  (0, 0)\t0.3333333333333333\n",
+      "  (1, 0)\t0.3333333333333333\n",
+      "  (2, 0)\t-0.6666666666666666\n",
+      "  (1, 1)\t-1.0\n",
       "  (2, 2)\t1.0\n"
      ]
     }
    ],
    "source": [
-    "print(Ainv)"
+    "Ainv2 = lu.solve_sparse(eye(3))\n",
+    "print(Ainv2)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 19,
+   "id": "c14b32e1-d1f2-4f7d-98bd-95aaa731c91c",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "A=lil_matrix(Ainv2)"
    ]
   },
   {
@@ -168,7 +210,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 35,
+   "execution_count": 27,
    "id": "e44b061f",
    "metadata": {},
    "outputs": [],
@@ -176,9 +218,10 @@
     "import numpy as np\n",
     "import scipy as sp\n",
     "from scipy import sparse\n",
-    "from scipy.sparse import diags, triu, vstack, hstack, csr_matrix\n",
+    "from scipy.sparse import diags, triu, vstack, hstack, csr_matrix, eye\n",
     "from scipy.sparse.linalg import spsolve_triangular\n",
     "from tqdm import tqdm\n",
+    "from scikits.umfpack import splu\n",
     "\n",
     "def process_sparse_matrix(sparse_matrix):\n",
     "    ploidy = sparse_matrix.data.max()\n",
@@ -226,14 +269,16 @@
     "    # Step 5: Solve the triangular system\n",
     "    n = Xh.shape[0]\n",
     "    Xh_reordered = Xh_reordered.astype(int).tocsr()\n",
-    "    b = np.eye(n)\n",
-    "    A = spinv_triangular(Xh_reordered)\n",
-    "   \n",
+    "    b = eye(n)\n",
+    "    #A = spinv_triangular(Xh_reordered)\n",
+    "    lu = splu(Xh_reordered)\n",
+    "    A = lu.solve_sparse(csc_matrix(b))\n",
+    "\n",
     "    # Undo the reordering\n",
     "    original_order = np.argsort(sorted_indices)\n",
     "    Ahaplo = A[original_order, :][:, original_order]\n",
     "    Asample = sparse_matrix_csc @ Ahaplo\n",
-    "    Ahaplo = sparse.eye(n) - Ahaplo\n",
+    "    Ahaplo = eye(n) - Ahaplo\n",
     "\n",
     "    # Step 7: Construct Ainit\n",
     "    m, n = Asample.shape\n",
@@ -249,37 +294,21 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 36,
+   "execution_count": 28,
    "id": "2a6b38dd",
    "metadata": {},
    "outputs": [],
    "source": [
     "from scipy.io import mmread\n",
-    "X = mmread('/Users/loconnor/Dropbox/linearArg/data/genotypes.mtx')"
+    "X = mmread('/Users/loconnor/Dropbox/linearArg/linearg_shared/genotypes.mtx')"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 57,
+   "execution_count": null,
    "id": "2ac08bc0",
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stderr",
-     "output_type": "stream",
-     "text": [
-      "100%|███████████████████████████████████| 51461/51461 [2:08:55<00:00,  6.65it/s]\n"
-     ]
-    },
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "CPU times: user 1h 39min 5s, sys: 21.7 s, total: 1h 39min 27s\n",
-      "Wall time: 2h 9min 11s\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "%%time\n",
     "Ainit, flip_alleles = process_sparse_matrix(X)"
@@ -365,7 +394,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.9.12"
+   "version": "3.11.8"
   }
  },
  "nbformat": 4,
