--- a/src/linear_dag/simple_simulation.ipynb
+++ b/src/linear_dag/simple_simulation.ipynb
@@ -5,8 +5,8 @@
    "id": "initial_id",
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2024-06-21T13:23:39.218003Z",
-     "start_time": "2024-06-21T13:23:38.556905Z"
+     "end_time": "2024-06-21T13:52:10.823035Z",
+     "start_time": "2024-06-21T13:52:10.012838Z"
     }
    },
    "source": [
@@ -28,8 +28,8 @@
    "id": "a1f61d6538733dfc",
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2024-06-21T13:23:39.627863Z",
-     "start_time": "2024-06-21T13:23:39.624331Z"
+     "end_time": "2024-06-21T13:52:10.827011Z",
+     "start_time": "2024-06-21T13:52:10.823963Z"
     }
    },
    "source": [
@@ -48,8 +48,8 @@
   {
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2024-06-21T13:23:41.009654Z",
-     "start_time": "2024-06-21T13:23:41.006815Z"
+     "end_time": "2024-06-21T13:52:10.877580Z",
+     "start_time": "2024-06-21T13:52:10.875595Z"
     }
    },
    "cell_type": "code",
@@ -75,8 +75,8 @@
   {
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2024-06-21T13:23:43.193263Z",
-     "start_time": "2024-06-21T13:23:43.189594Z"
+     "end_time": "2024-06-21T13:52:11.412273Z",
+     "start_time": "2024-06-21T13:52:11.409201Z"
     }
    },
    "cell_type": "code",
@@ -105,8 +105,8 @@
   {
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2024-06-21T13:23:46.102401Z",
-     "start_time": "2024-06-21T13:23:46.100053Z"
+     "end_time": "2024-06-21T13:52:11.822845Z",
+     "start_time": "2024-06-21T13:52:11.820134Z"
     }
    },
    "cell_type": "code",
@@ -135,8 +135,8 @@
   {
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2024-06-21T13:23:48.746817Z",
-     "start_time": "2024-06-21T13:23:48.740754Z"
+     "end_time": "2024-06-21T13:52:12.159442Z",
+     "start_time": "2024-06-21T13:52:12.154061Z"
     }
    },
    "cell_type": "code",
@@ -154,8 +154,8 @@
   {
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2024-06-21T13:23:49.249698Z",
-     "start_time": "2024-06-21T13:23:49.245898Z"
+     "end_time": "2024-06-21T13:52:12.500130Z",
+     "start_time": "2024-06-21T13:52:12.496730Z"
     }
    },
    "cell_type": "code",
@@ -165,7 +165,7 @@
     {
      "data": {
       "text/plain": [
-       "(144, 105)"
+       "(160, 105)"
       ]
      },
      "execution_count": 7,
@@ -178,14 +178,43 @@
   {
    "metadata": {},
    "cell_type": "markdown",
+   "source": "linarg_initial has no recombination nodes, so it gives us the reduced graph of the simulated linear ARG:",
+   "id": "15660999d3cd31b6"
+  },
+  {
+   "metadata": {
+    "ExecuteTime": {
+     "end_time": "2024-06-21T13:52:14.012977Z",
+     "start_time": "2024-06-21T13:52:14.008878Z"
+    }
+   },
+   "cell_type": "code",
+   "source": "print(linarg_initial.A[number_of_samples:,:][:,number_of_samples:].todense())",
+   "id": "f24426aeb3d21116",
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "[[0 0 0]\n",
+      " [1 0 0]\n",
+      " [1 0 0]]\n"
+     ]
+    }
+   ],
+   "execution_count": 8
+  },
+  {
+   "metadata": {},
+   "cell_type": "markdown",
    "source": "We can find the recombination node and improve sparsity as follows:",
    "id": "e62271514aded9c3"
   },
   {
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2024-06-21T13:25:11.792052Z",
-     "start_time": "2024-06-21T13:25:11.782613Z"
+     "end_time": "2024-06-21T13:52:15.246577Z",
+     "start_time": "2024-06-21T13:52:15.242629Z"
     }
    },
    "cell_type": "code",
@@ -209,24 +238,24 @@
        "107"
       ]
      },
-     "execution_count": 11,
+     "execution_count": 9,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
-   "execution_count": 11
+   "execution_count": 9
   },
   {
    "metadata": {},
    "cell_type": "markdown",
-   "source": "This isn't exactly the original linear ARG, but it has only 2 additional edges:",
+   "source": "This isn't exactly the original linear ARG, as it has 2 additional edges. One of the things I'm currently working on is to improve the find_recombinations function such that it doesn't create these. Here's where those extra edges come from:",
    "id": "c05767ce5d7d5d1f"
   },
   {
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2024-06-21T13:31:36.706199Z",
-     "start_time": "2024-06-21T13:31:36.703858Z"
+     "end_time": "2024-06-21T13:52:16.451396Z",
+     "start_time": "2024-06-21T13:52:16.449031Z"
     }
    },
    "cell_type": "code",
@@ -250,7 +279,7 @@
      ]
     }
    ],
-   "execution_count": 26
+   "execution_count": 10
   },
   {
    "metadata": {},
@@ -261,8 +290,8 @@
   {
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2024-06-21T13:38:17.201156Z",
-     "start_time": "2024-06-21T13:38:17.193639Z"
+     "end_time": "2024-06-21T13:52:17.502423Z",
+     "start_time": "2024-06-21T13:52:17.499746Z"
     }
    },
    "cell_type": "code",
@@ -285,7 +314,7 @@
      ]
     }
    ],
-   "execution_count": 29
+   "execution_count": 11
   },
   {
    "metadata": {},
@@ -296,8 +325,8 @@
   {
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2024-06-21T13:40:10.281989Z",
-     "start_time": "2024-06-21T13:40:10.272964Z"
+     "end_time": "2024-06-21T13:52:19.085532Z",
+     "start_time": "2024-06-21T13:52:19.075409Z"
     }
    },
    "cell_type": "code",
@@ -318,19 +347,11 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "[100.  48.  41.] [[100.  48.  41.]] [[100.  48.  41.]]\n"
+      "[100.  52.  50.] [[100.  52.  50.]] [[100.  52.  50.]]\n"
      ]
     }
    ],
-   "execution_count": 31
-  },
-  {
-   "metadata": {},
-   "cell_type": "code",
-   "outputs": [],
-   "execution_count": null,
-   "source": "",
-   "id": "12fd43e0d433afec"
+   "execution_count": 12
   }
  ],
  "metadata": {
